--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "generateurblague",
-  "version": "0.0.1",
-  "private": true,
-  "main": "index.js",
-  "scripts": {
-    "start": "react-scripts start"
-  },
-  "dependencies": {
-    "axios": "^1.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.73.2",
-    "react-script": "^2.0.5",
-    "react-scripts": "^5.0.1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"scripts": {
+		"start": "cross-env mode=development && nodemon index.js",
+		"watch": "cross-env mode=development && webpack --config webpack.config.js",
+		"build": "cross-env mode=production && webpack --config webpack.config.js"
+	},
+	"nodemonConfig": {
+		"ignore": [
+			"public/*",
+			"src/*",
+			"webpack.config.js"
+		]
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.18.6",
+		"@babel/preset-react": "^7.18.6",
+		"@svgr/webpack": "^6.3.1",
+		"babel-core": "^4.7.16",
+		"babel-loader": "^8.2.5",
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.7.1",
+		"dotenv": "^16.3.1",
+		"nodemon": "^3.0.1",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.73.0",
+		"webpack-cli": "^4.10.0"
+	},
+	"dependencies": {
+		"axios": "^1.6.2",
+		"express": "^4.18.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	}
 }
